--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -14,10 +14,13 @@ jobs:
 
     strategy:
       matrix:
-        laravel: [9.*, 8.*, 7.*, 6.*, 5.7.*, 5.6.*, 5.5.*]
+        laravel: [10.*, 9.*, 8.*, 7.*, 6.*, 5.7.*, 5.6.*, 5.5.*]
         dependency-version: [prefer-stable]
         os: [ubuntu-latest]
         include:
+          - laravel: 10.*
+            testbench: 8.*
+            php: 8.1
           - laravel: 9.*
             testbench: 7.*
             php: 8.0.2
