--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     ],
     "require": {
         "php": "^7.0|^8.0",
-        "laravel/framework": ">=5.5.0 <9.x-dev"
+        "laravel/framework": ">=5.5.0 <=10.x-dev"
     },
     "require-dev": {
         "orchestra/testbench": "*"
